--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -118,11 +118,11 @@ header h1 {
 .todo-item button:last-of-type:hover {
   background-color: #dc2626;
 }
-h2{
+h2 {
   text-align: center;
   margin-bottom: 1rem;
 }
-.clear-btn{
+.clear-btn {
   background-color: #ef4444;
   color: #fff;
   border: none;
@@ -132,11 +132,10 @@ h2{
   cursor: pointer;
   transition: background-color 0.3s;
   margin-left: 0.5rem;
-  
 }
-.clear-btn:hover{
+.clear-btn:hover {
   background-color: #dc2626;
 }
-.center{
+.center {
   text-align: center;
 }
